<resources>
    <string name="okay">OK</string>

    <string name="app_name">LearnByEar</string>
    <string name="facebook_app_id">1193124347407752</string>
    <string name="thanks_for_appending">Thanks for appending our lyrics base!</string>
    <string name="action_settings">action settings</string>
    <string name="action_item1">Language</string>
    <string name="action_item2">Authors</string>
    <string name="login">Login</string>
    <string name="action_item3">Exit</string>
    <string name="search">Search song</string>

    <string name="edit">Edit</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="error_no_network">No network</string>
    <string name="message_signed_in">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out_fail">Sign out failed!</string>
    <string name="del_account_fail">Account deletion failed!</string>
    <string name="error_empty_request">The request is empty</string>

    <string name="search_hint">Input here</string>
    <string name="go">Go!</string>
    <string name="up">Up</string>

    <string name="preview_gloss">Preview</string>
    <string name="submit_gloss">Submit</string>
    <string name="deselect">Deselect all</string>

    <string name="native_languages">Select your native languages</string>
    <string name="learn_languages">Select the languages you learn</string>

    <string name="label_artist">Artist</string>
    <string name="label_title">Title</string>

</resources>
