<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/search"
        android:id="@+id/search_song"
        />
    <item
        android:id="@+id/action_item1"
        android:orderInCategory="100"
        android:title="@string/action_item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item2"
        android:orderInCategory="100"
        android:title="@string/action_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_item3"
        app:showAsAction="never" />

</menu>